phone number hover and screen size adjustment for dropdown menu updated.

--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -1,8 +1,10 @@
 @use '../custom' as *;
 @use '../components/mixins' as *;
+
 //made gradient into a separate, reusable component
 //in mixins. Note the use actuals are linked in navbar, mixins, style
 //this is in order to @include the gradient under the .menu class
+//Also, a dollar sign '$' declares a "variable", then a colon ':' is '='
 
 .menu {
    @include gradient;
